<resources>
    <string name="app_name">Score My Putt Putt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_icon">App Icon</string>
    <string name="startTxt">START</string>
    <string name="strokesTxt">Strokes</string>
    <string name="minusTxt">-</string>
    <string name="zeroTxt">0</string>
    <string name="plusTxt">+</string>
    <string name="p1_hole_ind">Hole</string>
    <string name="p2_hole_ind">of 18</string>
    <string name="placeholderTxt">Placeholder</string>
    <string name="next_playerTxt">Next Player</string>
    <string name="next_holeTxt">Next Hole</string>
    <string name="exit_gameTxt">Exit Game</string>
    <string name="finish_gameTxt">Finish Game</string>
    <string name="loadingTxt">Loading...</string>
    <string name="score">Score</string>
    <string name="number_of_playersTxtTemp">Number of Players</string>
    <string name="start_gameTxt">Start Game</string>
    <string name="_1Txt">1</string>
    <string name="overviewTxt">OVERVIEW</string>
    <string name="hole_1">Hole 1</string>
    <string name="hole_2">Hole 2</string>
    <string name="hole_3">Hole 3</string>
    <string name="hole_4">Hole 4</string>
    <string name="hole_5">Hole 5</string>
    <string name="hole_6">Hole 6</string>
    <string name="hole_7">Hole 7</string>
    <string name="hole_8">Hole 8</string>
    <string name="hole_9">Hole 9</string>
    <string name="hole_10">Hole 10</string>
    <string name="hole_11">Hole 11</string>
    <string name="hole_12">Hole 12</string>
    <string name="hole_13">Hole 13</string>
    <string name="hole_14">Hole 14</string>
    <string name="hole_15">Hole 15</string>
    <string name="hole_16">Hole 16</string>
    <string name="hole_17">Hole 17</string>
    <string name="hole_18">Hole 18</string>
    <string name="Txt">CLOSE</string>
    <string name="finish">Finish</string>
    <string name="player">Player</string>
    <string name="total_score">Total Score</string>
    <string name="save_changesTxt">Save Changes</string>
    <string name="removeTxt">Remove</string>
    <string name="enter_nameTxt">Enter Name</string>
    <string name="add_player">+ Add Player</string>
</resources>