<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/player_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textView"
        android:text="@string/loadingTxt" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="131dp"
        android:layout_below="@id/player_winner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aldrich"
                    app:backgroundTint="@color/primary_dark"
                    android:background="@drawable/customborder"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/player" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aldrich"
                    app:backgroundTint="@color/primary_dark"
                    android:background="@drawable/customborder"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="8dp"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_score" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listPlayerObjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:foregroundTint="@color/black"
                android:layout_gravity="center"
                tools:itemCount="0" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/primaryButton"
        android:text="@string/finish"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
